# streaming-flights-at-brisbane-airport

./: .gitignore  .terraform.lock.hcl  main.tf  pyproject.toml  readme.md  setup.cfg  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
.terraform/: terraform.tfstate
ci/: Jenkinsfile  build_and_push_image.sh
flows/: get_flight_tracks.py  get_flights.py
orchestration/: Dockerfile  blocks.py  build_deployments.sh  deployments.yaml
scripts/: load_bq.sh
src/: flightaware.py  utils.py
