[tool.poetry]
name = "streaming-flights-at-brisbane-airport"
version = "0.1.0"
description = ""
authors = ["muhammad tariq <usama.bt94@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-secret-manager = "^2.16.2"
pandas = "^2.0.3"
gcsfs = "^2023.6.0"
pyarrow = "^12.0.1"
google-cloud-bigquery = "^3.11.4"
db-dtypes = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
